2005-04-09 Stephen Silver

	* Fix to encode_entities() call to only encode <>&'"

2005-04-09 crschmidt

	* lib/SVG/Metadata.pm:  Fixing tabs, improving RDF generation.

2005-02-07 23:00  bryce

	* lib/SVG/Metadata.pm:  Corrected a few bugs in the printing of
	  keywords in emitted RDF.  Fixed problem with parsing publisher
	  information. 
	* scripts/svg_annotate:  Added -e flag for editing metadata.
	  Fiddled with how keywords are edited a little.

2004-10-17 23:00  bryce

	* lib/SVG/Metadata.pm:  Switching to use of HTML::Entities

	* scripts/svg_annotate:  For automatically generated titles,
	  instead of using the first filename for titles of all images, 
	  use each file's filename.

2004-10-10 12:15  bryce

	* lib/SVG/Metadata.pm:  Adding escaping of <, >, and & for rdf

2004-10-04 21:38  bryce

	* scripts/svg_annotate:  Adding -k,--keywords feature

2004-08-06 00:38  bryce

	* lib/SVG/Metadata, scripts/svg_annotate:  Keywords functionality

2004-06-26 14:39  bryce

	* scripts/: cleanup_clipart, test_it, unpack_clipart,
	  package_clipart, retrieve_clipart: 
	  adding some new scripts
	
2004-06-24 22:04  bryce

	* lib/SVG/Metadata.pm: Fixing author() breakage

2004-06-23 00:55  bryce

	* lib/SVG/Metadata.pm: Fleshing out docs and hooking up more
	accessor functions

2004-06-22 23:02  bryce

	* lib/SVG/Metadata.pm: Adding some metadata items and expanding the
	types of inputs that parse() takes.

2004-06-20 16:41  bryce

	* Makefile.PL, lib/SVG/Metadata.pm, scripts/package_clipart.sh: I
	found that XML::Twig 3.09 was not up to snuff, so requiring the
	latest version in Makefile.PL.
	
	Also adding backend support for a bunch more metadata fields.  Much
	of this is just hooks, and the rest of the support is still TBD.
	
	Major change is making it accept RDF that is in <metadata> elements
	(where it is supposed to go, after all.)
	
	Minor change is to start shifting from author -> creator.
	
	Also fleshed out the packaging script a tad, to help automate